added ARIA to the site

--- a/restaurant.html
+++ b/restaurant.html
@@ -21,15 +21,15 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" role="main">
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" aria-label="Breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" aria-role="application" aria-label="Google map">
       <div id="map"></div>
     </section>
     <!-- End map -->
