changed somethings from the first preview of the project
-fixed some headings
-added a skip-link to skip the map
-made the filter responsive for the very small screens, and the main header
-fixed the images that were too tall in small screens

--- a/restaurant.html
+++ b/restaurant.html
@@ -30,12 +30,13 @@
     <!-- End nav -->
     <!-- Beginning map -->
     <section id="map-container" aria-role="application" aria-label="Google map">
+    <a href="#restaurant-container" class="skip-link">skip the map</a>
       <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+    <section id="restaurant-container" tabindex="-1">
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
