--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   </header>
 
   <main id="maincontent" role="main">
+    <a href="#restaurants-container" class="skip-link">skip the map and go to main content</a>
     <section id="map-container" aria-role="application" aria-label="Google map">
       <div id="map"></div>
     </section>
-    <section>
+    <section id="restaurants-container" tabindex="-1">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <div>
