added the IndexedDB

--- a/restaurant.html
+++ b/restaurant.html
@@ -58,6 +58,10 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <script type="text/javascript" src="js/idb-library.js"></script>
+  <script type="text/javascript" src="js/idb-script.js"></script>  
+  <script type="text/javascript" src="js/main/indexController.js"></script>
+
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
