--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
     </section>
   </main>
 
+  <!-- 'js/dbhelper.js', 'js/main.js' -->
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script type="text/javascript" src="js/idb-library.js"></script>
-  <script type="text/javascript" src="js/idb-script.js"></script>
-  <script type="text/javascript" src="js/indexController.js"></script>
-
-  <!-- <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script> -->
-  <!-- <script type="application/javascript" charset="utf-8" src="js/main.js"></script> -->
- 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxcv426vnVa-jJpL5T5567JakNW1d-7Jw&libraries=places&callback=initMap"></script>
+
+  <!-- 'js/indexController.js', 'js/idb-library.js', 'js/idb-script.js' -->
+  <script type="text/javascript" src="js/offline-script.js"></script>
+ 
 
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
