--- a/restaurant.html
+++ b/restaurant.html
@@ -57,19 +57,13 @@
   </footer>
   <!-- End footer -->
 
-  <!-- Beginning scripts -->
+  <!-- 'js/dbhelper.js', 'js/restaurant_info.js' -->
   <script type="application/javascript" charset="utf-8" src="js/restaurant_info.js"></script>
-  <script type="text/javascript" src="js/idb-library.js"></script>
-  <script type="text/javascript" src="js/idb-script.js"></script>  
-  <script type="text/javascript" src="js/indexController.js"></script>
-
-  <!-- Database helpers -->
-  <!-- <script type="text/javascript" src="js/dbhelper.js"></script> -->
-  <!-- Main javascript file -->
-  <!-- <script type="text/javascript" src="js/restaurant_info.js"></script> -->
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxcv426vnVa-jJpL5T5567JakNW1d-7Jw&libraries=places&callback=initMap"></script>
-  <!-- End scripts -->
+
+  <!-- 'js/indexController.js', 'js/idb-library.js', 'js/idb-script.js' -->
+  <script type="text/javascript" src="js/offline-script.js"></script>
 
 </body>
 
